force-app/main/default/objects/Account/fields/CreditHold__c.field-meta.xml
<CustomField>
    <fullName>CreditHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Hold</label>
    <type>Checkbox</type>
</CustomField>