force-app/main/default/objects/Account/fields/TotalOutstanding__c.field-meta.xml
<CustomField>
    <fullName>TotalOutstanding__c</fullName>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>